fix: add word break styles to container for text wrapping
(cherry picked from commit f5ee94abfc1295113b504a70303faa0d2bbe52f6)

--- a/gravitee-apim-portal-webui-next/src/components/page/page-markdown/page-markdown.component.scss
+++ b/gravitee-apim-portal-webui-next/src/components/page/page-markdown/page-markdown.component.scss
@@ -25,7 +25,6 @@ pre {
   word-wrap: break-word;
 }
 
-<<<<<<< HEAD
 table {
   overflow: hidden;
   width: auto;
@@ -99,13 +98,9 @@ table {
   &--caution {
     color: var(--gio-marked-alert-icon-caution-color, inherit);
   }
-=======
+}
 table td {
-  overflow-wrap: break-word !important;
+  overflow-wrap: break-word !important; /* Ensure text will break in the middle of words if needed */
+  word-break: break-all !important; /* Break text at any character, including between letters */
   white-space: normal !important;
-<<<<<<< HEAD
->>>>>>> d5e4f032b5 (fix: add word break styles to container for text wrapping)
-=======
-  word-break: break-all !important;
->>>>>>> 64f69f3eed (squash! fix: add word break styles to container for text wrapping)
 }
